# ddd-rust-application

./: .env  Cargo.toml  Makefile.toml  README.md
crates/user-service/application/: Cargo.toml
crates/user-service/application/src/: commands.rs  lib.rs  queries.rs  user_service.rs
crates/user-service/domain/: Cargo.toml
crates/user-service/domain/src/: entities.rs  lib.rs  repository.rs
crates/user-service/domain/src/value_objects/: email.rs  mod.rs  password.rs  user_id.rs  username.rs
crates/user-service/infrastructure/: Cargo.toml
crates/user-service/infrastructure/src/: lib.rs  model.rs  pg_repository.rs
crates/user-service/presentation/: Cargo.toml
crates/user-service/presentation/src/: config.rs  dto.rs  handlers.rs  main.rs
infra/docker_compose/: docker-compose.yml
migrations/: 20251229070710_01_init_tbl_users.sql  20251231024433_02_init_tbl_tenants.sql  20251231101126_00_init_extension.sql  20251231104735_02_init_tbl_users.sql  20251231110103_01_init_tbl_tenants.sql  20251231113659_01_tbl_tenants.sql  20251231113730_02_tbl_users.sql
shared/auth/: Cargo.toml
shared/base/: Cargo.toml
shared/base/src/model/: audit.rs  mod.rs
shared/base/src/model/value_objects/: created_at.rs  created_by.rs  mod.rs  updated_at.rs  updated_by.rs
shared/base/src/web/: error.rs  response.rs
