[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dev"]

[workspace]
resolver = "3"
members = [
    #user-service 4 layer
    "crates/user-service/presentation",
    "crates/user-service/infrastructure",
    "crates/user-service/domain",
    "crates/user-service/application"
    # common lib
    , "shared/base"]

[workspace.dependencies]
uuid = { version = "1.19.0", features = ["v7", "serde"] }
axum = { version = "0.8.8" }
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "chrono", "postgres"] }
anyhow = { version = "1.0.100" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3.22" }
dotenvy = { version = "0.15.7" }
config = { version = "0.15.19" }
thiserror = { version = "2.0.17" }
regex = { version = "1.12.2" }
serde_json = { version = "1.0.148" }
argon2 = { version = "0.5.3" }
rand_core = { version = "0.6.4", features = ["getrandom"] }