[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Dev"]

[workspace]
resolver = "3"
members = [
    #user-service 4 layer
    "crates/user-service/presentation",
    "crates/user-service/infrastructure",
    "crates/user-service/domain",
    "crates/user-service/application"
    # common lib
    , "shared/base"]

[workspace.dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8" }
argon2 = { version = "0.5.3" }
regex = { version = "1.12.2" }
kafka = { version = "0.10.0" }
anyhow = { version = "1.0.100" }
tracing = { version = "0.1.44" }
dotenvy = { version = "0.15.7" }
config = { version = "0.15.19" }
thiserror = { version = "2.0.17" }
serde_json = { version = "1.0.148" }
tracing-subscriber = { version = "0.3.22" }
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.19.0", features = ["v7", "serde"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "chrono", "postgres"] }
