[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand_core = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
base = { path = "../../../shared/base" }
